--- a/template.yaml
+++ b/template.yaml
@@ -34,10 +34,8 @@ objects:
           - name: fabrictools
             image: hyperledger/fabric-tools:2.2.0
             imagePullPolicy: Always
-            command: ["sh", "-c", "sleep 48h"]
+            command: ["sh", "-c","cd ../fabric && chmod +x ../fabric/commands.sh && ../fabric/commands.sh"]
             env:
-            - name: TZ
-              value: "America/Sao_Paulo"
             - name: FABRIC_CFG_PATH
               value: "/fabric"
             volumeMounts:
