add imageStream to template

--- a/template-init.yaml
+++ b/template-init.yaml
@@ -24,7 +24,7 @@ objects:
             claimName: fabric-pvc
         initContainers:
         - name: app-init
-          image: image-registry.openshift-image-registry.svc:5000/choroukamahri/fabric-alpine:latest
+          image: image-registry.openshift-image-registry.svc:5000/${PROJECT}/fabric-alpine:latest
           volumeMounts:
           - mountPath: /fabric
             name: fabricfiles
@@ -34,7 +34,7 @@ objects:
           - name: fabrictools
             image: hyperledger/fabric-tools:2.2.0
             imagePullPolicy: Always
-            command: ["sh", "-c","cd ../fabric && chmod +x ../fabric/commands.sh && ../fabric/commands.sh"]
+            command: ["sh", "-c","cd ../fabric &&  chmod +x ../fabric/commands.sh && ../fabric/commands.sh"]
             env:
             - name: FABRIC_CFG_PATH
               value: "/fabric"
@@ -47,9 +47,41 @@ objects:
     name: fabric-pvc
   spec:
     accessModes:
-      - ReadWriteMany
+      - ReadWriteOnce
     resources:
       requests:
-        storage: 10Gi
-
-
+        storage: ${VOLUME_SIZE} 
+- apiVersion: v1
+  kind: ImageStream
+  metadata:
+    name: fabric-alpine
+  spec:
+    lookupPolicy:
+      local: false
+    tags:
+      - name: latest
+        annotations: null
+        from:
+          kind: DockerImage
+          name: 'us.icr.io/${NAMESPACE}/fabric-alpine:latest'
+        generation: 2
+        importPolicy: {}
+        referencePolicy:
+          type: Local
+parameters:
+- description: Value for project
+  displayName: project
+  name: PROJECT
+  required: true
+- description: le size du storage
+  displayName: le size du storage
+  name: VOLUME_SIZE
+  required: true
+- description: storage Class Name
+  displayName: storageClassName
+  name: STORAGE_CLASS
+  required: true
+- description: namespace
+  displayName: NameSpace
+  name: NAMESPACE
+  required: true
