--- a/template-clibank.yaml
+++ b/template-clibank.yaml
@@ -43,25 +43,25 @@ objects:
             - name: CORE_PEER_TLS_ENABLED
               value: "true"
             - name: CORE_PEER_TLS_CERT_FILE
-              value: "/fabric/crypto-config/peerOrganizations/Bank${NUM}.banksco.com/peers/peer0.Bank${NUM}.banksco.com/tls/server.crt"
+              value: "/fabric/crypto-config/peerOrganizations/bank${NUM}.banksco.com/peers/peer0.bank${NUM}.banksco.com/tls/server.crt"
             - name: CORE_PEER_TLS_KEY_FILE
-              value: "/fabric/crypto-config/peerOrganizations/Bank${NUM}.banksco.com/peers/peer0.Bank${NUM}.banksco.com/tls/server.key"
+              value: "/fabric/crypto-config/peerOrganizations/bank${NUM}.banksco.com/peers/peer0.bank${NUM}.banksco.com/tls/server.key"
             - name: CORE_PEER_TLS_ROOTCERT_FILE
-              value: "/fabric/crypto-config/peerOrganizations/Bank${NUM}.banksco.com/peers/peer0.Bank${NUM}.banksco.com/tls/ca.crt"
+              value: "/fabric/crypto-config/peerOrganizations/bank${NUM}.banksco.com/peers/peer0.bank${NUM}.banksco.com/tls/ca.crt"
             - name: CORE_PEER_MSPCONFIGPATH
-              value: "/fabric/crypto-config/peerOrganizations/Bank${NUM}.banksco.com/users/Admin@Bank${NUM}.banksco.com/msp"
+              value: "/fabric/crypto-config/peerOrganizations/bank${NUM}.banksco.com/users/Admin@bank${NUM}.banksco.com/msp"
             - name: CHANNEL_NAME
               value: "bankscochannel"
             - name: ORDERER_TLS_CA
               value: "/fabric/crypto-config/ordererOrganizations/banksco.com/orderers/orderer.banksco.com/msp/tlscacerts/tlsca.banksco.com-cert.pem"
             - name: PEER0_BANK1_TLS_CA
-              value: "/fabric/crypto-config/peerOrganizations/Bank${NUM}.banksco.com/peers/peer0.Bank${NUM}.banksco.com/tls/ca.crt"
+              value: "/fabric/crypto-config/peerOrganizations/bank${NUM}.banksco.com/peers/peer0.bank${NUM}.banksco.com/tls/ca.crt"
             - name: PEER0_BANK1_PRADDR
-              value: "peer0.Bank${NUM}.banksco.com:7051"
+              value: "peer0.bank${NUM}.banksco.com:7051"
             - name: PEER1_BANK1_TLS_CA
-              value: "/fabric/crypto-config/peerOrganizations/Bank${NUM}.banksco.com/peers/peer1.Bank${NUM}.banksco.com/tls/ca.crt"
+              value: "/fabric/crypto-config/peerOrganizations/bank${NUM}.banksco.com/peers/peer1.bank${NUM}.banksco.com/tls/ca.crt"
             - name: PEER1_BANK1_PRADDR
-              value: "peer1.Bank${NUM}.banksco.com:7051"           
+              value: "peer1.bank${NUM}.banksco.com:7051"           
             volumeMounts:
               - mountPath: /fabric
                 name: fabricfiles
