--- a/template-clibank1.yaml
+++ b/template-clibank1.yaml
@@ -8,7 +8,7 @@ objects:
 - apiVersion: v1
   kind: DeploymentConfig
   metadata:
-    name: fabric-clibank${NUM}-dc
+    name: fabric-clibank1-dc
   spec:
     strategy:
       type: Recreate
@@ -33,58 +33,54 @@ objects:
             - name: CORE_VM_ENDPOINT
               value: "unix:///host/var/run/docker.sock"
             - name: FABRIC_LOGGING_SPEC
-              value: "INFO"
+              value: "DEBUG"
             - name: CORE_PEER_ID
-              value: "cliBank${NUM}"
+              value: "cliBank1"
             - name: CORE_PEER_ADDRESS
-              value: "peer0.Bank${NUM}.banksco.com:7051"
+              value: "peer0.Bank1.banksco.com:7051"
             - name: CORE_PEER_LOCALMSPID
-              value: "Bank${NUM}MSP"
+              value: "Bank1MSP"
             - name: CORE_PEER_TLS_ENABLED
               value: "true"
             - name: CORE_PEER_TLS_CERT_FILE
-              value: "/fabric/crypto-config/peerOrganizations/bank${NUM}.banksco.com/peers/peer0.bank${NUM}.banksco.com/tls/server.crt"
+              value: "/fabric/crypto-config/peerOrganizations/bank1.banksco.com/peers/peer0.bank1.banksco.com/tls/server.crt"
             - name: CORE_PEER_TLS_KEY_FILE
-              value: "/fabric/crypto-config/peerOrganizations/bank${NUM}.banksco.com/peers/peer0.bank${NUM}.banksco.com/tls/server.key"
+              value: "/fabric/crypto-config/peerOrganizations/bank1.banksco.com/peers/peer0.bank1.banksco.com/tls/server.key"
             - name: CORE_PEER_TLS_ROOTCERT_FILE
-              value: "/fabric/crypto-config/peerOrganizations/bank${NUM}.banksco.com/peers/peer0.bank${NUM}.banksco.com/tls/ca.crt"
+              value: "/fabric/crypto-config/peerOrganizations/bank1.banksco.com/peers/peer0.bank1.banksco.com/tls/ca.crt"
             - name: CORE_PEER_MSPCONFIGPATH
-              value: "/fabric/crypto-config/peerOrganizations/bank${NUM}.banksco.com/users/Admin@bank${NUM}.banksco.com/msp"
+              value: "/fabric/crypto-config/peerOrganizations/bank1.banksco.com/users/Admin@bank1.banksco.com/msp"
             - name: CHANNEL_NAME
               value: "bankscochannel"
             - name: ORDERER_TLS_CA
               value: "/fabric/crypto-config/ordererOrganizations/banksco.com/orderers/orderer.banksco.com/msp/tlscacerts/tlsca.banksco.com-cert.pem"
             - name: PEER0_BANK1_TLS_CA
-              value: "/fabric/crypto-config/peerOrganizations/bank${NUM}.banksco.com/peers/peer0.bank${NUM}.banksco.com/tls/ca.crt"
+              value: "/fabric/crypto-config/peerOrganizations/bank1.banksco.com/peers/peer0.bank1.banksco.com/tls/ca.crt"
             - name: PEER0_BANK1_PRADDR
-              value: "peer0.bank${NUM}.banksco.com:7051"
+              value: "peer0.bank1.banksco.com:7051"
             - name: PEER1_BANK1_TLS_CA
-              value: "/fabric/crypto-config/peerOrganizations/bank${NUM}.banksco.com/peers/peer1.bank${NUM}.banksco.com/tls/ca.crt"
+              value: "/fabric/crypto-config/peerOrganizations/bank1.banksco.com/peers/peer1.bank1.banksco.com/tls/ca.crt"
             - name: PEER1_BANK1_PRADDR
-              value: "peer1.bank${NUM}.banksco.com:7051"           
+              value: "peer1.bank1.banksco.com:7051"           
             volumeMounts:
               - mountPath: /fabric
                 name: fabricfiles
             ports:
               - containerPort: 7052
                 protocol: TCP
+
 - apiVersion: v1
   kind: Service
   metadata:
     annotations: null
     labels: null
-    name: clibank-svc
+    name: clibank1-svc
   spec:
     ports:
     - name: clibank
-      port: 7052
+      port: 8052
       protocol: TCP
-      targetPort: 7052
+      targetPort: 8052
     selector:
-      name: clibank-banksco-com
-parameters:
-- description: number of the clibank
-  displayName: number of the clibank
-  name: NUM
-  required: true
+      name: clibank1
 
