--- a/templateOrderer.yaml
+++ b/templateOrderer.yaml
@@ -8,7 +8,7 @@ objects:
 - apiVersion: v1
   kind: DeploymentConfig
   metadata:
-    name: fabricdc
+    name: fabric-orderer-dc
   spec:
     strategy:
       type: Recreate
@@ -16,26 +16,28 @@ objects:
     template:
       metadata:
         labels:
-          name: fabric
+          name: orderer
       spec:
+        selector:
+          name: orderer
         volumes:
         - name: fabricfiles
           persistentVolumeClaim:
             claimName: fabric-pvc
         containers:
-          - name: orderer-banksco-com
+          - name: orderer
             image: hyperledger/fabric-orderer:2.2.0
             imagePullPolicy: Always
             command: ["sh", "-c","orderer"]
             env:
             - name: FABRIC_LOGGING_SPEC
-              value: "info"
+              value: "DEBUG"        
+            - name: ORDERER_GENERAL_GENESISFILE
+              value: "/fabric/channel-artifacts/genesis.block"
             - name: ORDERER_GENERAL_LISTENADDRESS
               value: "0.0.0.0"
             - name: ORDERER_GENERAL_GENESISMETHOD
-              value: "file"
-            - name: ORDERER_GENERAL_GENESISFILE
-              value: "/fabric/channel-artifacts/genesis.block"
+              value: "file"             
             - name: ORDERER_GENERAL_LOCALMSPID
               value: "OrdererMSP"
             - name: ORDERER_GENERAL_LOCALMSPDIR
@@ -48,6 +50,10 @@ objects:
               value: "/fabric/crypto-config/ordererOrganizations/banksco.com/orderers/orderer.banksco.com/tls/server.crt"
             - name: ORDERER_GENERAL_TLS_ROOTCAS
               value: "/fabric/crypto-config/ordererOrganizations/banksco.com/orderers/orderer.banksco.com/tls/ca.crt"
+            - name: ORDERER_GENERAL_TLS_CLIENTAUTHREQUIRED
+              value: "true"
+            - name : ORDERER_GENERAL_TLS_CLIENTROOTCAS
+              value: "[/fabric/crypto-config/peerOrganizations/bank1.banksco.com/tlsca/tlsca.bank1.banksco.com-cert.pem,/fabric/crypto-config/peerOrganizations/bank2.banksco.com/tlsca/tlsca.bank2.banksco.com-cert.pem]" 
             volumeMounts:
               - mountPath: /fabric
                 name: fabricfiles
@@ -57,8 +63,6 @@ objects:
 - apiVersion: v1
   kind: Service
   metadata:
-    annotations: null
-    labels: null
     name: orderer-svc
   spec:
     ports:
@@ -67,6 +71,6 @@ objects:
       protocol: TCP
       targetPort: 7050
     selector:
-      name: orderer-banksco-com
+      name: orderer
 
 
