--- a/all-peers-onetemplate.yaml
+++ b/all-peers-onetemplate.yaml
@@ -8,7 +8,7 @@ objects:
 - apiVersion: v1
   kind: DeploymentConfig
   metadata:
-    name: fabricpeer01dc
+    name: peer0bank1dc
   spec:
     strategy:
       type: Recreate
@@ -16,7 +16,7 @@ objects:
     template:
       metadata:
         labels:
-          name: peer
+          name: peer0bank1
       spec:
         volumes:
         - name: fabricfiles
@@ -26,19 +26,18 @@ objects:
           - name: peer0-bank1-banksco-com
             image: hyperledger/fabric-peer:2.2.0
             imagePullPolicy: Always
+            command: ["sh","-c","peer node start"]
             env:
-              - name: FABRIC_LOGGING_SPEC
-                value: "DEBUG"
-              - name: CORE_PEER_TLS_ENABLED
-                value: "true"
-              - name: CORE_PEER_GOSSIP_USELEADERELECTION
-                value: "true"
               - name: CORE_PEER_GOSSIP_ORGLEADER
                 value: "false"
+              - name: CORE_PEER_GOSSIP_USELEADERELECTION
+                value: "true"
               - name: CORE_PEER_PROFILE_ENABLED
                 value: "true"
-              - name: CORE_PEER_TLS_CLIENTAUTHREQUIRED
+              - name: CORE_PEER_TLS_ENABLED
                 value: "true"
+              - name: FABRIC_LOGGING_SPEC
+                value: "DEBUG"
               - name: CORE_PEER_TLS_CLIENTAUTHREQUIRED
                 value: "/fabric/crypto-config/peerOrganizations/bank1.banksco.com/peers/peer0.bank1.banksco.com/msp"
               - name: CORE_PEER_TLS_CERT_FILE
@@ -52,23 +51,53 @@ objects:
                 name: fabricfiles
             ports:
               - containerPort: 7051
-              - containerPort: 7053
+- apiVersion: v1
+  kind: Service
+  metadata:
+    annotations: null
+    labels: null
+    name: peer0bank1-svc
+  spec:
+    ports:
+    - name: "7051"
+      port: 7051
+      targetPort: 7051
+    selector:
+      name: peer0bank1
+
+- apiVersion: v1
+  kind: DeploymentConfig
+  metadata:
+    name: peer1bank1dc
+  spec:
+    strategy:
+      type: Recreate
+    replicas: 1
+    template:
+      metadata:
+        labels:
+          name: peer1bank1
+      spec:
+        volumes:
+        - name: fabricfiles
+          persistentVolumeClaim:
+            claimName: fabric-pvc
+        containers:
           - name: peer1-bank1-banksco-com
             image: hyperledger/fabric-peer:2.2.0
             imagePullPolicy: Always
+            command: ["sh","-c","peer node start"]
             env:
-              - name: FABRIC_LOGGING_SPEC
-                value: "DEBUG"
-              - name: CORE_PEER_TLS_ENABLED
-                value: "true"
-              - name: CORE_PEER_GOSSIP_USELEADERELECTION
-                value: "true"
               - name: CORE_PEER_GOSSIP_ORGLEADER
                 value: "false"
+              - name: CORE_PEER_GOSSIP_USELEADERELECTION
+                value: "true"
               - name: CORE_PEER_PROFILE_ENABLED
                 value: "true"
-              - name: CORE_PEER_TLS_CLIENTAUTHREQUIRED
+              - name: CORE_PEER_TLS_ENABLED
                 value: "true"
+              - name: FABRIC_LOGGING_SPEC
+                value: "DEBUG"
               - name: CORE_PEER_TLS_CLIENTAUTHREQUIRED
                 value: "/fabric/crypto-config/peerOrganizations/bank1.banksco.com/peers/peer1.bank1.banksco.com/msp"
               - name: CORE_PEER_TLS_CERT_FILE
@@ -82,100 +111,137 @@ objects:
                 name: fabricfiles
             ports:
               - containerPort: 7051
-              - containerPort: 7053
-          - name: peer0-bank2-banksco-com
-            image: hyperledger/fabric-peer:2.2.0
-            imagePullPolicy: Always
-            env:
-              - name: FABRIC_LOGGING_SPEC
-                value: "DEBUG"
-              - name: CORE_PEER_TLS_ENABLED
-                value: "true"
-              - name: CORE_PEER_GOSSIP_USELEADERELECTION
-                value: "true"
-              - name: CORE_PEER_GOSSIP_ORGLEADER
-                value: "false"
-              - name: CORE_PEER_PROFILE_ENABLED
-                value: "true"
-              - name: CORE_PEER_TLS_CLIENTAUTHREQUIRED
-                value: "true"
-              - name: CORE_PEER_TLS_CLIENTAUTHREQUIRED
-                value: "/fabric/crypto-config/peerOrganizations/bank1.banksco.com/peers/peer0.bank2.banksco.com/msp"
-              - name: CORE_PEER_TLS_CERT_FILE
-                value: "/fabric/crypto-config/peerOrganizations/bank1.banksco.com/peers/peer0.bank2.banksco.com/tls/server.crt"
-              - name: CORE_PEER_TLS_KEY_FILE
-                value: "/fabric/crypto-config/peerOrganizations/bank1.banksco.com/peers/peer0.bank2.banksco.com/tls/server.key"
-              - name: CORE_PEER_TLS_ROOTCERT_FILE
-                value: "/fabric/crypto-config/peerOrganizations/bank1.banksco.com/peers/peer0.bank2.banksco.com/tls/ca.crt"
-            volumeMounts:
-              - mountPath: /fabric
-                name: fabricfiles
-            ports:
-              - containerPort: 7051
-              - containerPort: 7053
-          - name: peer1-bank2-banksco-com
-            image: hyperledger/fabric-peer:2.2.0
-            imagePullPolicy: Always
-            command: ["sh","-c"," peer node start"]
-            env:
-              - name: FABRIC_LOGGING_SPEC
-                value: "DEBUG"
-              - name: CORE_PEER_TLS_ENABLED
-                value: "true"
-              - name: CORE_PEER_GOSSIP_USELEADERELECTION
-                value: "true"
-              - name: CORE_PEER_GOSSIP_ORGLEADER
-                value: "false"
-              - name: CORE_PEER_PROFILE_ENABLED
-                value: "true"
-              - name: CORE_PEER_TLS_CLIENTAUTHREQUIRED
-                value: "true"
-              - name: CORE_PEER_TLS_CLIENTAUTHREQUIRED
-                value: "/fabric/crypto-config/peerOrganizations/bank1.banksco.com/peers/peer1.bank2.banksco.com/msp"
-              - name: CORE_PEER_TLS_CERT_FILE
-                value: "/fabric/crypto-config/peerOrganizations/bank1.banksco.com/peers/peer1.bank2.banksco.com/tls/server.crt"
-              - name: CORE_PEER_TLS_KEY_FILE
-                value: "/fabric/crypto-config/peerOrganizations/bank1.banksco.com/peers/peer1.bank2.banksco.com/tls/server.key"
-              - name: CORE_PEER_TLS_ROOTCERT_FILE
-                value: "/fabric/crypto-config/peerOrganizations/bank1.banksco.com/peers/peer1.bank2.banksco.com/tls/ca.crt"
-            volumeMounts:
-              - mountPath: /fabric
-                name: fabricfiles
-            ports:
-              - containerPort: 7051
-              - containerPort: 7053
 - apiVersion: v1
   kind: Service
   metadata:
     annotations: null
     labels: null
-    name: peer-svc
+    name: peer1bank1-svc
   spec:
     ports:
     - name: "7051"
       port: 7051
       targetPort: 7051
-    - name: "7053"
-      port: 7053
-      targetPort: 7053
-    - name: "7056"
-      port: 7056
-      targetPort: 7051
-    - name: "7058"
-      port: 7058
-      targetPort: 7053
-    - name: "8051"
-      port: 8051
-      targetPort: 7051
-    - name: "8053"
-      port: 8053
-      targetPort: 7053
-    - name: "8056"
-      port: 8056
-      targetPort: 7051
-    - name: "8058"
-      port: 8058
-      targetPort: 7053
     selector:
-      name: peer
+      name: peer1bank1
 
+- apiVersion: v1
+  kind: DeploymentConfig
+  metadata:
+    name: peer0bank2dc
+  spec:
+    strategy:
+      type: Recreate
+    replicas: 1
+    template:
+      metadata:
+        labels:
+          name: peer0bank2
+      spec:
+        volumes:
+        - name: fabricfiles
+          persistentVolumeClaim:
+            claimName: fabric-pvc
+        containers:
+          - name: peer0-bank2-banksco-com
+            image: hyperledger/fabric-peer:2.2.0
+            imagePullPolicy: Always
+            command: ["sh","-c","peer node start"]
+            env:
+              - name: CORE_PEER_GOSSIP_ORGLEADER
+                value: "false"
+              - name: CORE_PEER_GOSSIP_USELEADERELECTION
+                value: "true"
+              - name: CORE_PEER_PROFILE_ENABLED
+                value: "true"
+              - name: CORE_PEER_TLS_ENABLED
+                value: "true"
+              - name: FABRIC_LOGGING_SPEC
+                value: "DEBUG"
+              - name: CORE_PEER_TLS_CLIENTAUTHREQUIRED
+                value: "/fabric/crypto-config/peerOrganizations/bank2.banksco.com/peers/peer0.bank2.banksco.com/msp"
+              - name: CORE_PEER_TLS_CERT_FILE
+                value: "/fabric/crypto-config/peerOrganizations/bank2.banksco.com/peers/peer0.bank2.banksco.com/tls/server.crt"
+              - name: CORE_PEER_TLS_KEY_FILE
+                value: "/fabric/crypto-config/peerOrganizations/bank2.banksco.com/peers/peer0.bank2.banksco.com/tls/server.key"
+              - name: CORE_PEER_TLS_ROOTCERT_FILE
+                value: "/fabric/crypto-config/peerOrganizations/bank2.banksco.com/peers/peer0.bank2.banksco.com/tls/ca.crt"
+            volumeMounts:
+              - mountPath: /fabric
+                name: fabricfiles
+            ports:
+              - containerPort: 7051
+- apiVersion: v1
+  kind: Service
+  metadata:
+    annotations: null
+    labels: null
+    name: peer0bank2-svc
+  spec:
+    ports:
+    - name: "7051"
+      port: 7051
+      targetPort: 7051
+    selector:
+      name: peer0bank2
+
+- apiVersion: v1
+  kind: DeploymentConfig
+  metadata:
+    name: peer1bank2dc
+  spec:
+    strategy:
+      type: Recreate
+    replicas: 1
+    template:
+      metadata:
+        labels:
+          name: peer1bank2
+      spec:
+        volumes:
+        - name: fabricfiles
+          persistentVolumeClaim:
+            claimName: fabric-pvc
+        containers:
+          - name: peer1-bank2-banksco-com
+            image: hyperledger/fabric-peer:2.2.0
+            imagePullPolicy: Always
+            command: ["sh","-c","peer node start"]
+            env:
+              - name: CORE_PEER_GOSSIP_ORGLEADER
+                value: "false"
+              - name: CORE_PEER_GOSSIP_USELEADERELECTION
+                value: "true"
+              - name: CORE_PEER_PROFILE_ENABLED
+                value: "true"
+              - name: CORE_PEER_TLS_ENABLED
+                value: "true"
+              - name: FABRIC_LOGGING_SPEC
+                value: "DEBUG"
+              - name: CORE_PEER_TLS_CLIENTAUTHREQUIRED
+                value: "/fabric/crypto-config/peerOrganizations/bank2.banksco.com/peers/peer1.bank2.banksco.com/msp"
+              - name: CORE_PEER_TLS_CERT_FILE
+                value: "/fabric/crypto-config/peerOrganizations/bank2.banksco.com/peers/peer1.bank2.banksco.com/tls/server.crt"
+              - name: CORE_PEER_TLS_KEY_FILE
+                value: "/fabric/crypto-config/peerOrganizations/bank2.banksco.com/peers/peer1.bank2.banksco.com/tls/server.key"
+              - name: CORE_PEER_TLS_ROOTCERT_FILE
+                value: "/fabric/crypto-config/peerOrganizations/bank2.banksco.com/peers/peer1.bank2.banksco.com/tls/ca.crt"
+            volumeMounts:
+              - mountPath: /fabric
+                name: fabricfiles
+            ports:
+              - containerPort: 7051
+
+- apiVersion: v1
+  kind: Service
+  metadata:
+    annotations: null
+    labels: null
+    name: peer1-bank2-svc
+  spec:
+    ports:
+    - name: "7051"
+      port: 7051
+      targetPort: 7051
+    selector:
+      name: peer1bank2
