--- a/template-clibank2.yaml
+++ b/template-clibank2.yaml
@@ -57,16 +57,16 @@ objects:
             - name: PEER0_BANK2_TLS_CA
               value: "/fabric/crypto-config/peerOrganizations/bank2.banksco.com/peers/peer0.bank2.banksco.com/tls/ca.crt"
             - name: PEER0_BANK2_PRADDR
-              value: "peer0.bank2.banksco.com:7051"
+              value: "peer-svc3:7051"
             - name: PEER1_BANK2_TLS_CA
               value: "/fabric/crypto-config/peerOrganizations/bank2.banksco.com/peers/peer1.bank2.banksco.com/tls/ca.crt"
             - name: PEER1_BANK2_PRADDR
-              value: "peer1.bank2.banksco.com:7051"           
+              value: "peer-svc4:7051"           
             volumeMounts:
               - mountPath: /fabric
                 name: fabricfiles
             ports:
-              - containerPort: 8052
+              - containerPort: 7052
                 protocol: TCP
 
 - apiVersion: v1
@@ -78,9 +78,9 @@ objects:
   spec:
     ports:
     - name: clibank
-      port: 8052
+      port: 7052
       protocol: TCP
-      targetPort: 8052
+      targetPort: 7052
     selector:
       name: clibank2
 
