--- a/template-clibank1.yaml
+++ b/template-clibank1.yaml
@@ -37,7 +37,7 @@ objects:
             - name: CORE_PEER_ID
               value: "cliBank1"
             - name: CORE_PEER_ADDRESS
-              value: "peer1-svc:7051"
+              value: "peer0:7051"
             - name: CORE_PEER_LOCALMSPID
               value: "Bank1MSP"
             - name: CORE_PEER_TLS_ENABLED
@@ -57,11 +57,11 @@ objects:
             - name: PEER0_BANK1_TLS_CA
               value: "/fabric/crypto-config/peerOrganizations/bank1.banksco.com/peers/peer0.bank1.banksco.com/tls/ca.crt"
             - name: PEER0_BANK1_PRADDR
-              value: "peer1-svc:7051"
+              value: "peer0:7051"
             - name: PEER1_BANK1_TLS_CA
               value: "/fabric/crypto-config/peerOrganizations/bank1.banksco.com/peers/peer1.bank1.banksco.com/tls/ca.crt"
             - name: PEER1_BANK1_PRADDR
-              value: "peer2-svc:7051:7051"           
+              value: "peer1:7051:7051"           
             volumeMounts:
               - mountPath: /fabric
                 name: fabricfiles
