--- a/all-peers-onetemplate.yaml
+++ b/all-peers-onetemplate.yaml
@@ -186,7 +186,7 @@ objects:
               - mountPath: /fabric
                 name: fabricfiles
             ports:
-              - containerPort:bbb
+              - containerPort: 7051
 - apiVersion: v1
   kind: Service
   metadata:
