--- a/template-clibank1.yaml
+++ b/template-clibank1.yaml
@@ -26,7 +26,7 @@ objects:
           - name: clibank1
             image: hyperledger/fabric-tools:2.2.0
             imagePullPolicy: Always
-            command: ["sh", "-c","sleep 24h"]
+            command: ["sh", "-c","cd ../fabric &&  chmod +x ../fabric/commands.sh && ../fabric/channel.sh && sleep 24h"]
             env:
             - name: GOPATH
               value: "/opt/gopath"
