--- a/template-clibank2.yaml
+++ b/template-clibank2.yaml
@@ -43,24 +43,24 @@ objects:
             - name: CORE_PEER_TLS_ENABLED
               value: "true"
             - name: CORE_PEER_TLS_CERT_FILE
-              value: "/fabric/crypto-config/peerOrganizations/bank2.banksco.com/peers/peer0.bank2.banksco.com/tls/server.crt"
+              value: "/fabric/crypto-config/peerOrganizations/bank2.banksco.com/peers/peer2.bank2.banksco.com/tls/server.crt"
             - name: CORE_PEER_TLS_KEY_FILE
-              value: "/fabric/crypto-config/peerOrganizations/bank2.banksco.com/peers/peer0.bank2.banksco.com/tls/server.key"
+              value: "/fabric/crypto-config/peerOrganizations/bank2.banksco.com/peers/peer2.bank2.banksco.com/tls/server.key"
             - name: CORE_PEER_TLS_ROOTCERT_FILE
-              value: "/fabric/crypto-config/peerOrganizations/bank2.banksco.com/peers/peer0.bank2.banksco.com/tls/ca.crt"
+              value: "/fabric/crypto-config/peerOrganizations/bank2.banksco.com/peers/peer2.bank2.banksco.com/tls/ca.crt"
             - name: CORE_PEER_MSPCONFIGPATH
               value: "/fabric/crypto-config/peerOrganizations/bank2.banksco.com/users/Admin@bank2.banksco.com/msp"
             - name: CHANNEL_NAME
               value: "bankscochannel"
             - name: ORDERER_TLS_CA
               value: "/fabric/crypto-config/ordererOrganizations/banksco.com/orderers/orderer.banksco.com/msp/tlscacerts/tlsca.banksco.com-cert.pem"
-            - name: PEER0_BANK2_TLS_CA
-              value: "/fabric/crypto-config/peerOrganizations/bank2.banksco.com/peers/peer0.bank2.banksco.com/tls/ca.crt"
-            - name: PEER0_BANK2_PRADDR
+            - name: peer2_BANK2_TLS_CA
+              value: "/fabric/crypto-config/peerOrganizations/bank2.banksco.com/peers/peer2.bank2.banksco.com/tls/ca.crt"
+            - name: PEER2_BANK2_PRADDR
               value: "peer2:7051"
-            - name: PEER1_BANK2_TLS_CA
-              value: "/fabric/crypto-config/peerOrganizations/bank2.banksco.com/peers/peer1.bank2.banksco.com/tls/ca.crt"
-            - name: PEER1_BANK2_PRADDR
+            - name: PEER3_BANK2_TLS_CA
+              value: "/fabric/crypto-config/peerOrganizations/bank2.banksco.com/peers/peer3.bank2.banksco.com/tls/ca.crt"
+            - name: PEER3_BANK2_PRADDR
               value: "peer3:7051"           
             volumeMounts:
               - mountPath: /fabric
