--- a/fabric-secret-template.yaml
+++ b/fabric-secret-template.yaml
@@ -34,7 +34,7 @@ objects:
           - name: fabrictools
             image: hyperledger/fabric-tools:2.2.0
             imagePullPolicy: Always
-            command: ["sh", "-c","cd ../fabric-secret &&  chmod +x ../fabric-secret/commands.sh && ../fabric-secret/commands.sh"]
+            command: ["sh", "-c","cd /fabric-secret &&  chmod +x /fabric-secret/commands.sh && /fabric-secret/commands.sh"]
             env:
             - name: FABRIC_CFG_PATH
               value: "/fabric-secret"
