--- a/fabric-secret-template.yaml
+++ b/fabric-secret-template.yaml
@@ -47,7 +47,7 @@ objects:
     name: fabric-secret-pvc
   spec:
     accessModes:
-      - ReadWriteMany
+      - ReadWriteOnce
     resources:
       requests:
         storage: ${VOLUME_SIZE}
