--- a/templateOrderer.yaml
+++ b/templateOrderer.yaml
@@ -87,4 +87,4 @@ objects:
     resources:
       requests:
         storage: 10Gi
-    storageClassName: ibmc-block-silver
+    storageClassName: ibmc-block-retain-custom
