--- a/fabric-get-secret-template.yaml
+++ b/fabric-get-secret-template.yaml
@@ -31,8 +31,29 @@ objects:
             volumeMounts:
               - mountPath: /fabric
                 name: fabricfiles
+- apiVersion: v1
+  kind: ImageStream
+  metadata:
+    name: fabric-get-secret-ubuntu
+  spec:
+    lookupPolicy:
+      local: false
+    tags:
+      - name: latest
+        annotations: null
+        from:
+          kind: DockerImage
+          name: 'us.icr.io/${NAMESPACE}/fabric-get-secret-ubuntu:latest'
+        generation: 2
+        importPolicy: {}
+        referencePolicy:
+          type: Local
 parameters:
 - description: Value for project
   displayName: project
   name: PROJECT
+  required: true
+- description: Value for namespace
+  displayName: namespace
+  name: NAMESPACE
   required: true
