add to Secret Key the location of the mounted volume

--- a/templateOrdererSecret.yaml
+++ b/templateOrdererSecret.yaml
@@ -53,12 +53,13 @@ objects:
             - name: ORDERER_GENERAL_TLS_ENABLED
               value: "true"
             - name: ORDERER_GENERAL_TLS_PRIVATEKEY
+              value: "/etc/secret-volume/ordererorg.orderers.ordererdomain.tls.serverkey"
               #value: "/fabric/crypto-config/ordererOrganizations/banksco.com/orderers/orderer.banksco.com/tls/server.key"
               #NOTE : corresponding file location is "/fabric/crypto-config/ordererOrganizations/banksco.com/orderers/orderer.banksco.com/tls/server.key"
-              valueFrom:
-                secretKeyRef:
-                  name: secret-blockchain-orderer-solution2
-                  key: ordererorg.orderers.ordererdomain.tls.serverkey
+              #valueFrom:
+              #  secretKeyRef:
+              #    name: secret-blockchain-orderer-solution2
+              #    key: ordererorg.orderers.ordererdomain.tls.serverkey
             - name: ORDERER_GENERAL_TLS_CERTIFICATE
               value: "/fabric/crypto-config/ordererOrganizations/banksco.com/orderers/orderer.banksco.com/tls/server.crt"
               #Note : if needed (in the future), get "server.crt" from Secrets
