change PVC configuration (storageClass and accessMode)

--- a/templateOrdererSecret.yaml
+++ b/templateOrdererSecret.yaml
@@ -107,8 +107,10 @@ objects:
     name: orderer-pvc
   spec:
     accessModes:
-      - ReadWriteOnce
+      #- ReadWriteOnce #CONFIG1 -> KO
+      - ReadWriteMany #CONFIG2 -> OK
     resources:
       requests:
         storage: 10Gi
-    storageClassName: ibmc-block-retain-bronze
+    #storageClassName: ibmc-block-retain-bronze #CONFIG1 -> KO
+    storageClassName: ibmc-file-bronze #CONFIG2 -> OK
