Mapping with the right container

--- a/templateOrdererSecret.yaml
+++ b/templateOrdererSecret.yaml
@@ -98,7 +98,8 @@ objects:
       protocol: TCP
       targetPort: 7050
     selector:
-      name: orderer
+      #Mapping with the right container
+      name: orderer-secret
 
 
 - kind: PersistentVolumeClaim
