--- a/config/configtx.yaml
+++ b/config/configtx.yaml
@@ -206,7 +206,7 @@ Orderer: &OrdererDefaults
     # Available types are "solo" and "kafka"
     OrdererType: solo
     Addresses:
-        - orderer.banksco.com:7050
+        - orderer:7050
     # Batch Timeout: The amount of time to wait before creating a batch
     BatchTimeout: 2s
     # Batch Size: Controls the number of messages batched into a block
