--- a/config/configtx.yaml
+++ b/config/configtx.yaml
@@ -61,7 +61,7 @@ Organizations:
             # AnchorPeers defines the location of peers which can be used
             # for cross org gossip communication.  Note, this value is only
             # encoded in the genesis block in the Application section context
-            - Host: peer0.bank1.banksco.com
+            - Host: peer0
               Port: 7051
     - &Bank2
         # DefaultOrg defines the organization which is used in the sampleconfig
@@ -88,7 +88,7 @@ Organizations:
             # AnchorPeers defines the location of peers which can be used
             # for cross org gossip communication.  Note, this value is only
             # encoded in the genesis block in the Application section context
-            - Host: peer2.bank2.banksco.com
+            - Host: peer3
               Port: 7051
 
 ################################################################################
