--- a/all-peers-onetemplate.yaml
+++ b/all-peers-onetemplate.yaml
@@ -40,6 +40,8 @@ objects:
             imagePullPolicy: Always
             command: ["sh","-c","peer node start"]
             env:
+              - name: FABRIC_CFG_PATH
+                value: /fabric/
               - name: CORE_LEDGER_STATE_STATEDATABASE
                 value: "CouchDB"
               - name: CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME
@@ -142,6 +144,8 @@ objects:
             imagePullPolicy: Always
             command: ["sh","-c","peer node start"]
             env:
+              - name: FABRIC_CFG_PATH
+                value: /fabric/    
               - name: CORE_LEDGER_STATE_STATEDATABASE
                 value: "CouchDB"
               - name: CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME
@@ -243,6 +247,8 @@ objects:
             imagePullPolicy: Always
             command: ["sh","-c","peer node start"]
             env:
+              - name: FABRIC_CFG_PATH
+                value: /fabric/          
               - name: CORE_LEDGER_STATE_STATEDATABASE
                 value: "CouchDB"
               - name: CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME
@@ -345,6 +351,8 @@ objects:
             imagePullPolicy: Always
             command: ["sh","-c","peer node start"]
             env:
+              - name: FABRIC_CFG_PATH
+                value: /fabric/          
               - name: CORE_LEDGER_STATE_STATEDATABASE
                 value: "CouchDB"
               - name: CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME
