--- a/template-clibank2.yaml
+++ b/template-clibank2.yaml
@@ -30,8 +30,8 @@ objects:
             env:
             - name: GOPATH
               value: "/opt/gopath"
-            - name: CORE_VM_ENDPOINT
-              value: "unix:///host/var/run/docker.sock"
+            - name: FABRIC_CFG_PATH
+              value: /fabric/   
             - name: FABRIC_LOGGING_SPEC
               value: "DEBUG"
             - name: CORE_PEER_ID
