--- a/all-peers-onetemplate.yaml
+++ b/all-peers-onetemplate.yaml
@@ -38,7 +38,7 @@ objects:
           - name: peer0-bank1-banksco-com
             image: hyperledger/fabric-peer:2.2.1
             imagePullPolicy: Always
-            command: ["sh","-c","peer node start"]
+            command: ["sh","-c","rm /etc/hyperledger/fabric/core.yaml && cp /fabric/core.yaml /etc/hyperledger/fabric && peer node start  "]
             env:
               - name: FABRIC_CFG_PATH
                 value: /fabric/
@@ -142,7 +142,7 @@ objects:
           - name: peer1-bank1-banksco-com
             image: hyperledger/fabric-peer:2.2.1
             imagePullPolicy: Always
-            command: ["sh","-c","peer node start"]
+            command: ["sh","-c","rm /etc/hyperledger/fabric/core.yaml && cp /fabric/core.yaml /etc/hyperledger/fabric && peer node start  "]
             env:
               - name: FABRIC_CFG_PATH
                 value: /fabric/    
@@ -245,7 +245,7 @@ objects:
           - name: peer0-bank2-banksco-com
             image: hyperledger/fabric-peer:2.2.1
             imagePullPolicy: Always
-            command: ["sh","-c","peer node start"]
+            command: ["sh","-c","rm /etc/hyperledger/fabric/core.yaml && cp /fabric/core.yaml /etc/hyperledger/fabric && peer node start  "]
             env:
               - name: FABRIC_CFG_PATH
                 value: /fabric/          
@@ -349,10 +349,8 @@ objects:
           - name: peer1-bank2-banksco-com
             image: hyperledger/fabric-peer:2.2.1
             imagePullPolicy: Always
-            command: ["sh","-c","peer node start"]
-            env:
-              - name: FABRIC_CFG_PATH
-                value: /fabric/          
+            command: ["sh","-c","rm /etc/hyperledger/fabric/core.yaml && cp /fabric/core.yaml /etc/hyperledger/fabric && peer node start"]
+            env:      
               - name: CORE_LEDGER_STATE_STATEDATABASE
                 value: "CouchDB"
               - name: CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME
