--- a/template-clibank1.yaml
+++ b/template-clibank1.yaml
@@ -26,12 +26,10 @@ objects:
           - name: clibank1
             image: hyperledger/fabric-tools:2.2.1
             imagePullPolicy: Always
-            command: ["sh", "-c","cd ../fabric &&  chmod +x ../fabric/channel.sh && ../fabric/channel.sh && sleep 24h"]
+            command: ["sh", "-c","rm /etc/hyperledger/fabric/core.yaml && cp /fabric/core.yaml /etc/hyperledger/fabric && cd ../fabric &&  chmod +x ../fabric/channel.sh && ../fabric/channel.sh && sleep 24h"]
             env:
             - name: GOPATH
               value: "/opt/gopath"
-            - name: CORE_VM_ENDPOINT
-              value: "unix:///host/var/run/docker.sock"
             - name: FABRIC_LOGGING_SPEC
               value: "DEBUG"
             - name: CORE_PEER_ID
