--- a/template-clibank1.yaml
+++ b/template-clibank1.yaml
@@ -27,6 +27,7 @@ objects:
             image: hyperledger/fabric-tools:2.2.1
             imagePullPolicy: Always
             command: ["sh", "-c","rm /etc/hyperledger/fabric/core.yaml && cp /fabric/core.yaml /etc/hyperledger/fabric && cd ../fabric &&  chmod +x ../fabric/channel.sh && ../fabric/channel.sh && sleep 24h"]
+            env:            
             - name: FABRIC_LOGGING_SPEC
               value: "DEBUG"
             - name: CORE_PEER_ID
