--- a/template-clibank2.yaml
+++ b/template-clibank2.yaml
@@ -28,6 +28,8 @@ objects:
             imagePullPolicy: Always
             command: ["sh", "-c","cd ../fabric &&  chmod +x ../fabric/channelclibank2.sh && ../fabric/channelclibank2.sh && cp /fabric/core.yaml /etc/hyperledger/fabric/core.yaml && sleep 24h"]
             env:
+            - name: FABRIC_CFG_PATH
+              value: /fabric/                
             - name: FABRIC_LOGGING_SPEC
               value: "DEBUG"
             - name: CORE_PEER_ID
