--- a/config/core.yaml
+++ b/config/core.yaml
@@ -225,7 +225,7 @@ chaincode:
         qscc: enable
 
     logging:
-      level:  info
+      level:  debug
       shim:   warning
       format: '%{color}%{time:2006-01-02 15:04:05.000 MST} [%{module}] %{shortfunc} -> %{level:.4s} %{id:03x}%{color:reset} %{message}'
 
